# autonomous-engineer

./: .env.example  .gitignore  Dockerfile  README.md  START.bat  STOP.bat  config.py  docker-compose.yml  engineer.bat  engineer.py  fastapi_notes_app.py  github_utils.py  hello_world.py  implement_todo_list_rest.py  litellm_config.yaml  main.py  main_test.py  multiply_function.py  pyproject.toml  requirements.txt  routes.py  script.py  services.py  setup.bat  test_hello_world.py  test_multiply.py  test_multiply_function.py  test_script.py  user_login.py  user_registration.py
.github/workflows/: ae_pipeline.yml  ci.yml
agent/: builder.py  cli.py  github_client.py  graph.py  reviewer.py  server.py
api/: main.py
confidence/: __init__.py  engine.py
memory/: __init__.py  init.sql  qdrant_store.py  recall.py  store.py
path/to/: file.py  fixed_file.py
retrieval/: indexer.py
scripts/: close_prs.py  compute_confidence.py  init_db.sql  k6_load_test.js  kill_run.py  pull_glm4.py  set_github_secrets.py
tests/: test_basic.py  test_fastapi_notes_app.py  test_generate_password.py  test_hypothesis.py  test_implement_todo_list_rest.py  test_main.py  test_something.py  test_user_login.py  test_user_registration.py
tests/e2e/: test_api_e2e.py
tests/load/: k6_script.js
tests/property/: test_invariants.py
